--- a/src/styles/global/_typography.scss
+++ b/src/styles/global/_typography.scss
@@ -1,11 +1,30 @@
-//! import google fonts
-// @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700');
-// OR use @font-face like below
-
-
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
 
 * {
-  outline: solid 1px rgba(255, 000, 000, 0.05);
   font-family: "Open Sans", sans-serif;
+}
+
+.text-blue-1 {
+  color: var(--blue-1) !important;
+}
+.text-blue-2 {
+  color: var(--blue-2) !important;
+}
+.text-black-1 {
+  color: var(--black-1) !important;
+}
+.text-white-1 {
+  color: var(--white-1) !important;
+}
+.text-grey-1 {
+  color: var(--grey-1) !important;
+}
+.text-grey-2 {
+  color: var(--grey-2) !important;
+}
+.text-grey-3 {
+  color: var(--grey-3) !important;
+}
+.text-grey-4 {
+  color: var(--grey-4) !important;
 }
