--- a/src/styles/global/_reset.scss
+++ b/src/styles/global/_reset.scss
@@ -1,4 +1,21 @@
+* {
+  user-select: none;
+}
+
 html,
 body {
   height: 100vh;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+input,
+select,
+textarea {
+  cursor: default;
 }
