sidebar,fecturing compoents, preloader, menu and brand-

--- a/src/styles/global/_debug.scss
+++ b/src/styles/global/_debug.scss
@@ -2,11 +2,11 @@
   outline: solid 1px rgba(255, 000, 000, 0.05);
 }
 
-#debug {
+#ui__debug {
   height: 80%;
   top: 10%;
   left: 10px;
   width: 50%;
   bottom: 10px;
-  background-color: rgba(000, 000, 000, 0.15);
+  background-color: rgba(000, 000, 000, 0.65);
 }
