--- a/src/styles/global/_typography.scss
+++ b/src/styles/global/_typography.scss
@@ -22,3 +22,7 @@
 .text-grey-4 {
   color: var(--grey-4) !important;
 }
+
+.text-sd-md {
+  text-shadow: 0px 1px 1px #ffffff4f, 0px 1px 5px #ffffff9c;
+}
