--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -2,6 +2,7 @@
   width: 24px;
   height: 5px;
   background-color: transparent;
+  transition: background var(--transition-sm);
 }
 
 .ui__menu--menuitem.ui__event--active .menu-bar {
