--- a/src/styles/global/_image.scss
+++ b/src/styles/global/_image.scss
@@ -3,3 +3,9 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+
+.img-bg-fit-bottom {
+  background-size: cover;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+}
