--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@
 @import "./styles/global/debug";
 @import "./styles/global/image";
 @import "./styles/global/margin";
+@import "./styles/global/button";
 
 // Components
 
