--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -23,4 +23,7 @@
   --transition-md: 0.7s cubic-bezier(0.49, -0.18, 0.48, 1.15) 0s;
   --transition-lg: 0.9s cubic-bezier(0.49, -0.18, 0.48, 1.15) 0s;
   --transition-xl: 1.1s cubic-bezier(0.49, -0.18, 0.48, 1.15) 0s;
+  --transition-xxl: 2.5s cubic-bezier(0.49, -0.18, 0.48, 1.15) 0s;
+  --transition-xxxl: 5s ease-out 0s;
+  --transition-xxxxl: 7.5s ease-out 0s;
 }
