mask fixed, animation fixed

--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -2,7 +2,7 @@
   width: 24px;
   height: 5px;
   background-color: transparent;
-  transition: background var(--transition-sm);
+  transition: background var(--transition-xs);
 }
 
 .ui__menu--menuitem.ui__event--active .menu-bar {
