--- a/src/styles/components/_featured.scss
+++ b/src/styles/components/_featured.scss
@@ -1,19 +1,14 @@
 #ui__featured--front__section {
   z-index: 3;
 }
+
 #ui__featured--front__image {
   z-index: -1;
   transform: scale(1.5);
   transition: transform var(--transition-xxxl);
 }
-#ui__featured--front__image:after,
-#ui__featured--front__image:before {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  background-color: #fff;
-}
-#ui__featured--front__image:after {
+
+#ui__featured--front__mask--bottom {
   height: 40%;
   width: 100%;
   min-width: 350px;
@@ -22,15 +17,9 @@
   background: url("/src/images/mask_bottom.png") no-repeat center bottom
     transparent;
   background-size: 100% 100%;
-  // background: linear-gradient(
-  //   0deg,
-  //   rgba(255, 255, 255, 1),
-  //   rgba(255, 255, 255, 1),
-  //   rgba(255, 255, 255, 0.55),
-  //   transparent
-  // );
+  position: absolute;
 }
-#ui__featured--front__image:before {
+#ui__featured--front__mask--left {
   width: 40%;
   height: 100%;
   min-height: 350px;
@@ -38,15 +27,8 @@
   top: 0;
   background: url("/src/images/mask_left.png") no-repeat left center transparent;
   background-size: 100% 100%;
-  // background: linear-gradient(
-  //   90deg,
-  //   rgba(255, 255, 255, 1),
-  //   rgba(255, 255, 255, 1),
-  //   rgba(255, 255, 255, 0.55),
-  //   transparent
-  // );
+  position: absolute;
 }
-
 .ui__event--prepare-animation #ui__featured--front__image {
 }
 .ui__event--animate #ui__featured--front__image {
