readme and refactor

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@
 @import "./styles/global/image";
 @import "./styles/global/margin";
 @import "./styles/global/button";
+@import "./styles/global/height";
 
 // Components
 
