--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -1,3 +1,7 @@
+#ui-left__menu .col:last-child a {
+  margin-bottom: 0px !important;
+}
+
 .ui__menu--menuitem .menu-bar {
   width: 24px;
   height: 5px;
