--- a/src/styles/global/_font.scss
+++ b/src/styles/global/_font.scss
@@ -112,22 +112,29 @@
 
 .fs-xxl {
   font-size: var(--fs-xxl);
+  line-height: var(--lh-xxl);
 }
 .fs-xl {
   font-size: var(--fs-xl);
+  line-height: var(--lh-xl);
 }
 .fs-lg {
   font-size: var(--fs-lg);
+  line-height: var(--lh-lg);
 }
 .fs-md {
   font-size: var(--fs-md);
+  line-height: var(--lh-md);
 }
 .fs-sm {
   font-size: var(--fs-sm);
+  line-height: var(--lh-sm);
 }
 .fs-xs {
   font-size: var(--fs-xs);
+  line-height: var(--lh-xs);
 }
 .fs-xxs {
   font-size: var(--fs-xxs);
+  line-height: var(--lh-xxs);
 }
