--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -14,6 +14,13 @@
   --fs-sm: 22px;
   --fs-xs: 18px;
   --fs-xxs: 16px;
+  --lh-xxl: 82px;
+  --lh-xl: 36px;
+  --lh-lg: 32px;
+  --lh-md: 32px;
+  --lh-sm: 26px;
+  --lh-xs: 22px;
+  --lh-xxs: 22px;
   --shadow: 0 0 4px rgba(000, 000, 000, 0.25);
   --bar-width: 24px;
   --bar-heigth: 5px;
