--- a/src/styles/global/_button.scss
+++ b/src/styles/global/_button.scss
@@ -3,8 +3,7 @@
   background-color: rgba(255, 2552, 255, 0.85);
   color: var(--blue-2);
   border-radius: 9px;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding: 12px 24px;
 }
 
 .btn-link {
