--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -25,13 +25,15 @@
   --bar-width: 24px;
   --bar-heigth: 5px;
   --active-border: solid 4px var(--blue-2);
-  --transition-xxs: 0.15s cubic-bezier(0.49, -0.18, 0.48, 1.15) 0s;
-  --transition-xs: 0.3s cubic-bezier(0.49, -0.18, 0.48, 1.15) 0s;
-  --transition-sm: 0.5s cubic-bezier(0.49, -0.18, 0.48, 1.15) 0s;
-  --transition-md: 0.7s cubic-bezier(0.49, -0.18, 0.48, 1.15) 0s;
-  --transition-lg: 0.9s cubic-bezier(0.49, -0.18, 0.48, 1.15) 0s;
-  --transition-xl: 1.1s cubic-bezier(0.49, -0.18, 0.48, 1.15) 0s;
-  --transition-xxl: 2.5s cubic-bezier(0.49, -0.18, 0.48, 1.15) 0s;
+  --transition-xxs: 0.15s cubic-bezier(0.4, 0.83, 0.48, 1.15) 0s;
+  --transition-xs: 0.3s cubic-bezier(0.4, 0.83, 0.48, 1.15) 0s;
+  --transition-sm: 0.5s cubic-bezier(0.4, 0.83, 0.48, 1.15) 0s;
+  --transition-md: 0.7s cubic-bezier(0.4, 0.83, 0.48, 1.15) 0s;
+  --transition-lg: 0.9s cubic-bezier(0.4, 0.83, 0.48, 1.15) 0s;
+  --transition-xl: 1.1s cubic-bezier(0.4, 0.83, 0.48, 1.15) 0s;
+  --transition-xxl: 2.5s cubic-bezier(0.4, 0.83, 0.48, 1.15) 0s;
   --transition-xxxl: 5s ease-out 0s;
   --transition-xxxxl: 7.5s ease-out 0s;
+
+  --transition-navigation: 0.3s cubic-bezier(0.4, 0.83, 0.48, 1.15) 0s;
 }
