Scoller Hostrial, Almoust Vertical

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,7 @@
 
 // Components
 
+@import "./styles/components/interface";
 @import "./styles/components/featured";
 @import "./styles/components/menu";
 @import "./styles/components/horaizon";
