--- a/src/styles/components/_interface.scss
+++ b/src/styles/components/_interface.scss
@@ -1,3 +1,12 @@
 #interface {
   z-index: 3;
 }
+
+#ui__left {
+  z-index: 6;
+  background-color: rgba(255, 255, 255, 0.85);
+}
+
+#ui__rigth {
+  padding-left: 5px;
+}
