Smooth Fade Animation

--- a/src/styles/components/_interface.scss
+++ b/src/styles/components/_interface.scss
@@ -4,7 +4,7 @@
 
 #ui__left {
   z-index: 6;
-  background-color: rgba(255, 255, 255, 0.85);
+  // background-color: rgba(255, 255, 255, 0.85);
 }
 
 #ui__rigth {
