--- a/src/styles/components/_scroller.scss
+++ b/src/styles/components/_scroller.scss
@@ -47,7 +47,7 @@
 
 .ui__scrollers_horizontal--row {
   opacity: 1;
-  transition: transform 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
 }
 
 .ui__scrollers_horizontal--row--hide {
