Settings and Behance Link

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,4 +22,5 @@
 @import "./styles/components/horaizon";
 @import "./styles/components/brand";
 @import "./styles/components/preloader";
+@import "./styles/components/settings";
 @import "./styles/components/scroller";
